...
        app:layout_constraintTop_toBottomOf="@id/tvEmoji"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="3"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:contentDescription="Save SOUL"
        app:srcCompat="@drawable/ic_check"
        app:backgroundTint="@color/warm_coral"
        app:layout_constraintBottom_toBottomOf="parent"
...
