<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_sync"
        android:title="Sync Now"
        android:icon="@drawable/ic_sync"
        android:showAsAction="ifRoom" />
</menu>
